@@ -1,3 +1,12 @@
+2009-12-06  Maciej Stachowiak  <mjs@apple.com>
+
+        Not reviewed, build fix.
+
+        Fix 64-bit build for prior patch.
+
+        * jit/JITOpcodes.cpp:
+        (JSC::JIT::emitSlow_op_loop_if_less):
+
 2009-12-05  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Oliver Hunt.
